--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,6 @@
     <!-- Elemento del menú (los tres puntos) -->
     <item
         android:id="@+id/action_about"
-        android:title="Acerca de..."
+        android:title="@string/acerca_de"
         android:icon="@drawable/medalla3" />
 </menu>
